kubernetes/event-producer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-producer
  labels:
    app: event-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-producer
  template:
    metadata:
      labels:
        app: event-producer

    spec:
      containers:
        - name: event-producer
          imagePullPolicy: Never
          image: event/event-producer:1.0
          ports:
          - name: event-port
            containerPort: 8080
