kubernetes/event-consumer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-consumer-service
  labels:
    app: event-consumer

spec:
  ports:
    - port: 30002
      nodePort: 30002
      protocol: TCP
      targetPort: event-port
  type: NodePort
  selector:
    app: event-consumer
